pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsNoDumbledore/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-0
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Hufflepuff) dst: (group = Web and group = Hufflepuff) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-1
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-2
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-3
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Hufflepuff) dst: (group = Web and group = Hufflepuff) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-4
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-5
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-6
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Hufflepuff) dst: (group = App and group = Hufflepuff) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-7
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-8
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-9
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Hufflepuff) dst: (group = App and group = Hufflepuff) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-10
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-11
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-12
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__DB
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Hufflepuff) dst: (group = DB and group = Hufflepuff) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-13
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__DB
                      operator: Exists
                    - key: group__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-14
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__DB
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-15
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__DB
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Hufflepuff) dst: (group = DB and group = Hufflepuff) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-16
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__DB
              operator: Exists
            - key: group__Hufflepuff
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-17
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__DB
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: "10230"
    creationTimestamp: null
    name: default-deny
    namespace: default
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Network Policy To Allow Access To DNS Server
        nsx-id: none
    creationTimestamp: null
    name: dns-policy
    namespace: default
spec:
    egress:
        - ports:
            - port: 53
              protocol: UDP
          to:
            - namespaceSelector: {}
              podSelector:
                matchLabels:
                    k8s-app: kube-dns
    podSelector: {}
    policyTypes:
        - Egress
